# tiny_software_renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
renderer/: CMakeLists.txt
renderer/private/: application.cpp  color.cpp  renderer.cpp
renderer/public/: application.h  color.h  renderer.h
samples/demo/: CMakeLists.txt  main.cpp
