project(renderer)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(RENDERER_HEADERS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/public)
set(RENDERER_SOURCES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/private)

file(GLOB_RECURSE RENDERER_HEADERS ${RENDERER_HEADERS_PATH}/*.h)
file(GLOB_RECURSE RENDERER_SOURCES ${RENDERER_SOURCES_PATH}/*.cpp)

add_library(${PROJECT_NAME} STATIC ${RENDERER_HEADERS} ${RENDERER_SOURCES})
target_link_libraries(${PROJECT_NAME} PUBLIC glad glfw ${OPENGL_LIBRARIES})
target_include_directories(${PROJECT_NAME} PUBLIC ${RENDERER_HEADERS_PATH})